feat : finish endpoint nilaiRT
